# elevenat

./: .env.sample  .gitignore  Makefile  README.md  compose.db.yaml  compose.yaml  test.py
backend/: pyproject.toml  requirements.txt  test.py
backend/apikeys/: admin.py  authentication.py  models.py
backend/apikeys/migrations/: 0001_initial.py
backend/attendance/: admin.py  models.py  serializers.py  urls.py  urls_api.py  views.py
backend/attendance/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/devices/: admin.py  forms.py  models.py  urls.py  views.py
backend/devices/migrations/: 0001_initial.py
backend/frontend/: apps.py  urls.py  utils.py  views.py
backend/templates/devices/: device_confirm_delete.html  device_form.html  device_list.html
backend/templates/frontend/: index.html
backend/templates/users/: home.html
backend/users/: admin.py  models.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/components/: HomeButton.tsx  Legend.tsx  UserIcon.tsx
frontend/src/pages/: PresenceStats.tsx  Room.tsx  UserDetail.tsx
raspberrypi/: detect_request.py
